# Gl0wFlow

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ai.md  architecture.html  demo.html  glowflow-v1.0.1-aarch64-apple-darwin.pkg  glowflow-v1.1.2-aarch64-apple-darwin.pkg  grammar.md  handbook.html  index.html  installer.bash  language.md  mcp.md  mother_test.rs  packages.html  release-checklist.md  runtime.md  semantics.html  semantics.md  speed.html  standalone-product-guide.md  terminal-demo.html  tests.html  v101_fixes_test.rs
assets/: creative_demo.cast
