[package]
name = "glow"
version = "1.0.1"
edition = "2021"
description = "GlowFlow - Product runtime for GlowScript, the plain-English scripting language for AI automation, agents, workflows, and MCP tools."
license = "Apache-2.0"

[lib]
name = "glow"
path = "src/lib.rs"

[[bin]]
name = "glow"
path = "src/main.rs"

[dependencies]
rustls = "0.21"
rustls-pemfile = "1.0"

[dev-dependencies]
proptest = "1.6"

[[bench]]
name = "basic_bench"
harness = false
